implemented the javascript for receiving and displaying the trivia questions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <h1>Trivia Game</h1>
 
+        <div id = "triviaDiv"> </div>
+    </div>
+
+    <script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
