Implemented the logic for users pick and switching to the next question

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="container">
         <h1>Trivia Game</h1>
 
         <div id = "triviaDiv"> </div>
