Restart and start buttons added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="container">
         <h1>Trivia Game</h1>
 
-        <div id = "triviaDiv"> </div>
+        <div id = "triviaDiv"> 
+                <button type="button" id ="startBut"> START! </button>
+        </div>
     </div>
 
     <script src="./assets/javascript/app.js"></script>
