Implemented css for the start screen and the game logic

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 
 <body>
     <div class="container">
-        <h1>Trivia Game</h1>
+        <div id="headerDiv">
+            <h1>Trivia Game</h1>
+        </div>
 
-        <div id = "triviaDiv"> 
-                <button type="button" id ="startBut"> START! </button>
+
+        <div id="triviaDiv" class="row">
+            <button type="button" id="startBut" class="btn btn-info btn-lg btn-block my-5"> START! </button>
         </div>
     </div>
 
